tests/overloadedrecflds/should_compile/T23010_aux.hs
{-# LANGUAGE DuplicateRecordFields #-}

module T23010_aux where

import {-# SOURCE #-} T23010 ( fld )

data X
bar = fld
